[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apollo"
version = "1.0"
description = "Apollo: An Exploration of Video Understanding in Large Multimodal Models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tokenizers==0.19.1", "sentencepiece==0.1.99", "shortuuid", "num2words",
    "accelerate==0.33.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio", "gradio_client==0.8.1", "easydict",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "fairscale", "decord", "opencv-python", "chardet",
    "datasets==2.16.1", "openai==1.8.0", "webdataset==0.2.86",
    "transformers==4.44.0", "ezcolorlog", "pytorchvideo",
    "torch===2.1.2", "torchvision==0.16.2", "word2number"
]

[project.optional-dependencies]
train = ["deepspeed==0.13.5", "ninja", "wandb", "ipdb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://apollo-lmms.github.io"
"Bug Tracker" = "https://github.com/apollo-lmms/Apollo/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "model_zoo*", "data*", "work_dirs*", "slurm_logs*", "logs*", "wandb*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "model_zoo*", "data*", "work_dirs*", "slurm_logs*", "logs*", "wandb*"]
